# otp_2fa

./: .gitignore  Makefile  README.md
backend/: Dockerfile  django.env.example  entrypoint.sh  env.example  pyproject.toml
backend/apps/accounts/: admin.py  constants.py  managers.py  models.py  serializers.py  urls.py  utils.py
backend/apps/accounts/migrations/: 0001_initial.py  0002_rename_created_timestamp_otp_creation_timestamp_and_more.py
backend/apps/accounts/tests/: test_constants.py  test_factory.py  tests.py
backend/apps/accounts/views/: auth_views.py  otp_views.py  views.py
backend/apps/generic/: apps.py  communications.py  docstrings.py  password_validators.py  serializer_fields.py  tests.py
backend/apps/generic/api/: api_exception_handler.py  api_exceptions.py  api_permissions.py  pagination.py
backend/apps/generic/backends/: authentication_backend.py  authentication_rules.py
backend/init/: .my_pgpass  .pg_service  asgi.py  settings.py  urls.py  wsgi.py
backend/templates/: email_otp_body.html  email_otp_subject.txt
devops/: Caddyfile  docker-compose.yaml
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  axiosConfigOld.js  main.js
frontend/src/components/: component.vue
frontend/src/router/: index.js
frontend/src/stores/: authStore.js  coreServices.js  genericStore.js  index.js  userServices.js  usersStore.js
frontend/src/utils/: apiConfig.js  axiosConfig.js  cookieManager.js  coreServices.js  passwordManager.js
frontend/src/views/: Home.vue  Login copy.vue  (+3 more)
